hello-world/templates/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - myownserver.thomasbouillon.fr
      secretName: letsencrypt-prod
  rules:
    - host: myownserver.thomasbouillon.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
